Fixed an issue with DocToc item sjumping 1px to the right when becoming active

--- a/src/less/themes/documentation.less
+++ b/src/less/themes/documentation.less
@@ -190,6 +190,7 @@
             &.active {
                 border-left: 2px solid rgba(45, 169, 68, 0.7);
                 font-weight: @font-weight-bold;
+                padding-left: calc(1rem - 1px);
             }
         }
     }
